tests/cases/generics/errors/generic-aggregate-field-mismatch.ari
struct Box[T] {
  value: T,
}

struct Token {
  kind: i64,
}

fn main() -> i64 {
  let value: Box[Token] = Box<Token> { value: 1 };
  return value.value.kind;
}
